<resources>

    <string name="app_name">Music Share</string>
    <string name="empty">Type Something First</string>
    <string name="menu_exit">Exit</string>
    <string name="share_by">I used Paper Airplane\'s Music Share (http://t.cn/zYyzZOK )to share</string>
    <string name="how_to_share">Choose an App to Share</string>
    <string name="how_to_play">Choose an App to Share</string>
    <string name="music_artist">\'s music</string>
    <string name="music_single">\'s single</string>
    <string name="music_album">from the album</string>
    <string name="before_url"> , check the link for more details:</string>
    <string name="menu_refresh">Refresh Music List</string>
    <string name="menu_search">Search Music on Internet</string>
    <string name="refresh_success">Successfully Refreshed Music List</string>
    <string name="play">Tap the Album Artwork to Play!</string>
    <string name="share">Share</string>
    <string name="choose_an_operation">Choose An Operation</string>
    <string name="refresh_on_process">Refresh On Process</string>
    <string name="menu_about">About</string>
    <string name="about_contact">Contact Us</string>
    <string name="about_content">Paper Airplane Dev Team\n@HarryChen-SIGKILL-\nhttp://weibo.com/yszzf\n@姚沛然\nhttp://weibo.com/xavieryao\n@七只小鸡1997\nhttp://weibo.com/u/1579617160\n@喝雪碧的虾PeterCxy\nhttp://weibo.com/u/1789004515</string>
    <string name="about_download_info">Download Here:</string>
    <string name="url">http://papdt.info</string>
    <string name="no_music_url_found">No Url Found</string>
    <string name="error_internet">Check Your Network Connection</string>
    <string name="querying">Querying……Please Wait</string>
    <string name="too_long">Your content is out of the max length.</string>
    <string name="send_succeed">Succeeded</string>
    <string name="not_authorized_error">You Should Authotize First</string>
    <string name="send_error">Send Failed, Error:</string>
    <string name="auth_error">Authorize Failed, Error:</string>
    <string name="auth">Auth</string>
    <string name="unauth">Unauthorize</string>
    <string name="auth_succeed">Succeeded</string>
    <string name="unauthed">Unauthorized</string>
    <string name="share2weibo">Share to Weibo</string>
    <string name="share2renren">Share to Renren</string>
    <string name="followauthor">Follow Author</string>
    <string name="search">Search the Internet</string>
    <string name="title">Title</string>
    <string name="artist">Artist</string>
    <string name="album">Album</string>
    <string name="duration">Duration</string>
    <string name="album_art">Album Art</string>
    <string name="no_app_found">No proper app found</string>
    <string name="single">[\&quot;单曲\&quot;]</string>
    <string name="unauth_confirm">Are You Sure to Unauth?</string>
    <string name="feedback_mail">(Auto)Feedback via Mail</string>
    <string name="feedback_weibo">Feedback via Weibo</string>
    <string name="thank_for_feedback">Thank you for your feedback</string>
    <string name="feedback_hint">Please tell us when and how the problem happens OR what you want to say. We are really grateful for your great help!</string>
    <string name="email_hint">Please leave your e-mail address here.</string>
    <string name="name_hint">How do we entitle you?</string>
    <string name="feedback_succeed">Feedback successfully reported, thank you!</string>
    <string name="feedback_failed">Sorry but we met some problem while reporting your feedback. Don\'t worry, we\'ll try again next time you open this App or you can just try it again. Still thank you!</string>
    <string name="send_file">Send File</string>
    <string name="menu_update">Check For Update</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="no_update">No Available Update Now</string>
    <string name="update_found">An Update is Available</string>
    <string name="update_download">Download Now</string>
    <string name="update_view">View in Market</string>
    <string name="update_remote_version">Latest Version:</string>
    <string name="update_whats_new">What\'s New:</string>
    <string name="update_release_date">Release Date:</string>
    <string name="update_no_market_found">No Market Found</string>
    <string name="thank_list">Thank List</string>
    <string name="thank_title">Thank You!</string>
    <string name="thank_content">感谢我们所有用户的支持</string>
    <string name="welcome_title">Welcome To Our App</string>
    <string name="welcome_content">Share Satisfying Music\nEnjoy Good Days \n\n</string>
    <string name="welcome_button">Let\'s enjoy this app~</string>
    <string name="whats_new">Add an handler in order not to crash the App when errors occur\nAutomatically retry when feedback fails</string>
    <string name="change_text_color">Change the color of the text</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="to_show_color">The color will appear here</string>
    <string name="menu_change_color">Change Overlay Color</string>
    <string name="menu_change_background">Change Background</string>
    <string name="menu_customize">Customize</string>
    <string name="reset">Reset</string>
    <string name="opacity">Opacity</string>
    <string name="at_notice">Who do you want to @?</string>
    <string name="menu_clean_cache">Clean Cache</string>
    <string name="choose_picture">Choose</string>
    <string name="choose_default">Default</string>
    <string name="clean_cache_done">Successfully cleaned cache files!</string>
    <string name="shake_random">I\'m feeling good~</string>
    <string name="delete_file_count">Delete file count:</string>
    <string name="if_change_text_color">You have changed the backgroud. Do you want to change the text color now?</string>
    <string name="account_manager">Account Manager</string>
    <string name="expires_time">Expires in:</string>
    <string name="notice">Notice</string>
    <string name="crash">Sorry but the App has met a serious problem and will be closed. Click \'OK\' to automatically send us feedback, \'Cancel\' to let the system handle the crash.</string>
    <string name="fail_re_report">It seems you tried to feedback but failed last time. Do you want to try again?</string>
    <string name="next_time">Next time</string>
    <string name="no_more">No more</string>

</resources>