<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/EditTextStyle"
    android:orientation="vertical" >

    <!-- title -->

    <LinearLayout
        style="@style/EditTextStyle"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/text_title"
            style="@style/TextViewStyle"
            android:text="@string/title" />

        <EditText
            android:id="@+id/et_title"
            style="@style/EditTextStyle"
            android:hint="@string/title" />
    </LinearLayout>

    <!-- artist -->

    <LinearLayout
        style="@style/EditTextStyle"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/text_artist"
            style="@style/TextViewStyle"
            android:text="@string/artist" />

        <EditText
            android:id="@+id/et_artist"
            style="@style/EditTextStyle"
            android:hint="@string/artist" />
    </LinearLayout>

    <!-- album -->

    <LinearLayout
        style="@style/EditTextStyle"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/text_album"
            style="@style/TextViewStyle"
            android:text="@string/album" />

        <EditText
            android:id="@+id/et_album"
            style="@style/EditTextStyle"
            android:hint="@string/album" />
    </LinearLayout>

    <!-- button -->

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btn_share2weibo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share2weibo" />

            <Button
                android:id="@+id/btn_share2others"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share2others" />
        </TableRow>
    </TableLayout>

</LinearLayout>